--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,14 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
+    "@okta/okta-react": "^1.2.0",
+    "@okta/okta-signin-widget": "^3.0.6",
+    "i": "^0.3.6",
+    "npm": "^6.10.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "^2.1.1"
   },
   "scripts": {
