--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@okta/okta-signin-widget": "^3.0.6",
+    "dotenv": "^8.0.0",
     "express": "^4.16.3",
+    "i": "^0.3.6",
     "if-env": "^1.0.4",
+    "npm": "^6.10.2",
     "react-router-dom": "^5.0.1"
   }
 }
