--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material-ui/core": "^4.2.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "loopback-cli": "^5.0.3",
     "react-router-dom": "^5.0.1"
   }
 }
