--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
   "name": "mern",
-  "version": "1.0.0",
-  "description": "Mern Demo",
-  "main": "server.js",
-  "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
-    "seed": "node scripts/seedDB.js",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.18.7"
-  },
+  "version": "0.1.0",
+  "private": true,
+  "proxy": "http://localhost:3000/",
   "dependencies": {
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
+    "@okta/okta-react": "^1.2.0",
     "@okta/okta-signin-widget": "^3.0.6",
-    "dotenv": "^8.0.0",
-    "express": "^4.16.3",
     "i": "^0.3.6",
-    "if-env": "^1.0.4",
     "npm": "^6.10.2",
-    "react-router-dom": "^5.0.1"
-  }
+    "react": "^16.6.3",
+    "react-burger-menu": "^2.6.10",
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^2.1.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
