--- a/electroscribe_api/electroscribe_api/tsconfig.json
+++ b/electroscribe_api/electroscribe_api/tsconfig.json
@@ -1,9 +1,11 @@
 {
-  "$schema": "http://json.schemastore.org/tsconfig",
-  "extends": "@loopback/build/config/tsconfig.common.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src"
-  },
-  "include": ["src"]
+    "$schema": "http://json.schemastore.org/tsconfig",
+    "extends": "@loopback/build/config/tsconfig.common.json",
+    "compilerOptions": {
+        "outDir": "dist",
+        "rootDir": "src"
+    },
+    "include": [
+        "src"
+    ]
 }
