--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "proxy": "http://localhost:3000/",
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@okta/okta-react": "^1.2.0",
     "@okta/okta-signin-widget": "^3.0.6",
+    "font-awesome": "^4.7.0",
     "i": "^0.3.6",
     "npm": "^6.10.2",
     "react": "^16.6.3",
@@ -27,5 +30,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.1"
+  }
 }
