--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
